readme updates - how to run guide

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.application.name=tool-rental-application
+spring.application.name=tool-rental
 spring.datasource.url=jdbc:h2:mem:toolrentaldb
 spring.datasource.driverClassName=org.h2.Driver
 spring.datasource.username=sa
