--- a/pom.xml
+++ b/pom.xml
@@ -9,10 +9,10 @@
         <relativePath/> <!-- lookup parent from repository -->
     </parent>
     <groupId>java.com</groupId>
-    <artifactId>tool-rental-application</artifactId>
+    <artifactId>tool-rental</artifactId>
     <version>0.0.1-SNAPSHOT</version>
-    <name>tool-rental-application</name>
-    <description>tool-rental-application</description>
+    <name>tool-rental</name>
+    <description>tool-rental</description>
     <url/>
     <licenses>
         <license/>
@@ -27,6 +27,7 @@
     <properties>
         <java.version>23</java.version>
         <lombok.version>1.18.36</lombok.version>
+        <spring-boot.version>3.4.0</spring-boot.version>
     </properties>
     <dependencies>
         <dependency>
@@ -77,8 +78,8 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
                 <configuration>
-                    <source>1.8</source>
-                    <target>1.8</target>
+                    <source>${java.version}</source>
+                    <target>${java.version}</target>
                     <annotationProcessorPaths>
                         <path>
                             <groupId>org.projectlombok</groupId>
